force-app/main/default/objects/Annual_Quota_Config__c/Annual_Quota_Config__c.object-meta.xml
<CustomObject>
    <label>Annual Quota Config</label>
    <nameField>
        <displayFormat>AQC-{000000}</displayFormat>
        <label>Annual Quota Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Annual Quota Configs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>