force-app/main/default/objects/Annual_Quota_Config__c/fields/Annual_Funnel_Addition_Target_Config__c.field-meta.xml
<CustomField>
    <fullName>Annual_Funnel_Addition_Target_Config__c</fullName>
    <label>Annual Funnel Addition Target Config</label>
    <referenceTo>Annual_Funnel_Addition_Target_Config__c</referenceTo>
    <relationshipLabel>Annual Quota Configs</relationshipLabel>
    <relationshipName>Annual_Quota_Configs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>