force-app/main/default/objects/Annual_Quota_Config__c/fields/Annual_Quote_Config_Name__c.field-meta.xml
<CustomField>
    <fullName>Annual_Quote_Config_Name__c</fullName>
    <formula>HYPERLINK(
&quot;/&quot; &amp; Id,
 Name__c  ,
&quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Quote Config Name</label>
    <type>Text</type>
</CustomField>