force-app/main/default/objects/Annual_Quota_Config__c/fields/AnnualTarget__c.field-meta.xml
<CustomField>
    <fullName>AnnualTarget__c</fullName>
    <label>Target(Annualized)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>