force-app/main/default/objects/Annual_Quota_Config__c/fields/IsSeller__c.field-meta.xml
<CustomField>
    <fullName>IsSeller__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSeller</label>
    <type>Checkbox</type>
</CustomField>