force-app/main/default/objects/Annual_Quota_Config__c/fields/Period_Target__c.field-meta.xml
<CustomField>
    <fullName>Period_Target__c</fullName>
    <label>Target(By Period)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>