force-app/main/default/objects/Annual_Quota_Config__c/fields/Rep__c.field-meta.xml
<CustomField>
    <fullName>Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Annual_Quota_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>