force-app/main/default/objects/Annual_Quota_Config__c/fields/UseCustomPeriod__c.field-meta.xml
<CustomField>
    <fullName>UseCustomPeriod__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Custom Period</label>
    <type>Checkbox</type>
</CustomField>