force-app/main/default/objects/Annual_Quota_Config__c/listViews/FY_2022Quota_Config.listView-meta.xml
<ListView>
    <fullName>FY_2022Quota_Config</fullName>
    <columns>Annual_Quote_Config_Name__c</columns>
    <columns>NAME</columns>
    <columns>IsSeller__c</columns>
    <columns>Rep__c</columns>
    <columns>AnnualTarget__c</columns>
    <columns>Period_Target__c</columns>
    <filterScope>Everything</filterScope>
    <label>FY 2022Quota Config</label>
</ListView>